# foothold

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run_all.py
bench/: __init__.py  activation.py  attention.py  gemm.py  norm.py  utils.py
config/: default.yaml
fit/: __init__.py  __main__.py  activation.py  attention.py  gemm.py  norm.py  utils.py
results/: all_operators.csv  attention.csv
